--- a/index.html
+++ b/index.html
@@ -1,61 +1,56 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>GetVA 365 Tools</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>GetVA Tools</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- External CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- HERO -->
-<section class="hero">
-  <div class="overlay">
-    <center><h1>GETVA TOOLS</h1>
-    <p>Bring all important information together in one convenient page</p></center>
-  </div>
-</section>
+  <section class="hero">
+    <h1>GETVA TOOLS</h1>
+    <p>Bring all important information together in one convenient page</p>
+  </section>
 
-<!-- PRODUCTS -->
-<section class="products">
-  <div class="grid">
+  <section class="tools">
 
     <div class="card">
-      <span class="tag green">FOR CHATS</span>
-      <h3>TAWK.TO™</h3><br>
-      <a class="btn green" href="https://www.tawk.to/" target="_blank" rel="noopener noreferrer">Go</a>
+      <span class="tag green">For Chats</span>
+      <h3>TAWK.TO™</h3>
+      <a href="https://www.tawk.to/" target="_blank" class="btn green">Go</a>
     </div>
 
-<div class="card">
-  <span class="tag blue">EMAIL</span>
-  <h3>GMAIL®</h3><br>
-  <a class="btn blue"
-     href="https://mail.google.com/a/carepackninjas.com"  
-     target="_blank"
-     rel="noopener noreferrer">
-     Go
-  </a>
-</div>
+    <div class="card">
+      <span class="tag blue">Email</span>
+      <h3>GMAIL®</h3>
+      <a href="https://mail.google.com/" target="_blank" class="btn blue">Go</a>
+    </div>
 
     <div class="card">
       <span class="tag red">DTR</span>
-      <h3>HUBSTAFF®</h3><br>
-      <a class="btn red" href="https://app.hubstaff.com" target="_blank" rel="noopener noreferrer">Go</a>
+      <h3>HUBSTAFF®</h3>
+      <a href="https://hubstaff.com/" target="_blank" class="btn red">Go</a>
     </div>
 
     <div class="card">
-      <span class="tag dark">WOOCOMMERCE SITE</span>
-      <h3>First Ballot Media™</h3><br>
-      <a class="btn dark" href="https://firstballotmedia.com" target="_blank" rel="noopener noreferrer">Go</a>
+      <span class="tag gray">WooCommerce Site</span>
+      <h3>First Ballot Media™</h3>
+      <a href="#" target="_blank" class="btn gray">Go</a>
     </div>
 
     <div class="card">
-      <span class="tag dark">WOOCOMMERCE SITE</span>
-      <h3>Pyro Streams™</h3><br>
-      <a class="btn dark" href="https://pyrostreams.com" target="_blank" rel="noopener noreferrer">Go</a>
+      <span class="tag gray">WooCommerce Site</span>
+      <h3>Pyro Streams™</h3>
+      <a href="#" target="_blank" class="btn gray">Go</a>
     </div>
 
-  </div>
-</section>
+  </section>
 
 </body>
 </html>
