--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
       <a href="https://www.tawk.to/" target="_blank" class="btn green">Go</a>
     </div>
 
-    <div class="card">
-      <span class="tag blue">Email</span>
-      <h3>GMAIL®</h3>
-      <a href="https://mail.google.com/" target="_blank" class="btn blue">Go</a>
-    </div>
+    <a class="btn blue"
+       href="https://mail.google.com/a/carepackninjas.com"
+       target="_blank"
+       rel="noopener noreferrer">
+       Go
+    </a>
 
     <div class="card">
       <span class="tag red">DTR</span>
@@ -54,3 +55,4 @@
 
 </body>
 </html>
+
