--- a/index.html
+++ b/index.html
@@ -27,16 +27,10 @@
     </div>
 
     <div class="card">
-      <span class="tag green">For Chats</span>
-      <h3>TAWK.TO™</h3>
-      <a href="https://www.tawk.to/" target="_blank" class="btn green">Go</a>
+      <span class="tag blue">Email</span>
+      <h3>GMAIL®</h3>
+      <a href="https://mail.google.com/" target="_blank" class="btn blue">Go</a>
     </div>
-    <a class="btn blue"
-       href="https://mail.google.com/a/carepackninjas.com"
-       target="_blank"
-       rel="noopener noreferrer">
-       Go
-    </a>
 
     <div class="card">
       <span class="tag red">DTR</span>
@@ -60,5 +54,3 @@
 
 </body>
 </html>
-
-
