--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
     </div>
 
     <div class="card">
-      <span class="tag blue">Email</span>
-      <h3>GMAIL®</h3>
-      <a href="https://mail.google.com/" target="_blank" class="btn blue">Go</a>
-    </div>
+  <span class="tag blue">Email</span>
+  <h3>GMAIL®</h3>
+  <a href="https://accounts.google.com/AccountChooser?hd=carepackninjas.com" 
+     target="_blank" 
+     class="btn blue">
+     Go
+  </a>
+  </div>
 
     <div class="card">
       <span class="tag red">DTR</span>
@@ -54,3 +58,4 @@
 
 </body>
 </html>
+
