--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <div class="card">
   <span class="tag blue">Email</span>
   <h3>GMAIL®</h3>
-  <a href="https://accounts.google.com/AccountChooser?hd=carepackninjas.com" 
+  <a href="https://mail.google.com/a/carepackninjas.com" 
      target="_blank" 
      class="btn blue">
      Go
   </a>
-  </div>
+</div>
 
     <div class="card">
       <span class="tag red">DTR</span>
@@ -58,4 +58,5 @@
 
 </body>
 </html>
+
 
