--- a/index.html
+++ b/index.html
@@ -45,18 +45,19 @@
     <div class="card">
       <span class="tag gray">WooCommerce Site</span>
       <h3>First Ballot Media™</h3>
-      <a href="#" target="_blank" class="btn gray">Go</a>
+      <a href="https://firstballotmedia.com/" target="_blank" class="btn gray">Go</a>
     </div>
 
     <div class="card">
       <span class="tag gray">WooCommerce Site</span>
       <h3>Pyro Streams™</h3>
-      <a href="#" target="_blank" class="btn gray">Go</a>
+      <a href="https://pyrostreams.com/my-account/" target="_blank" class="btn gray">Go</a>
     </div>
 
   </section>
 
 </body>
 </html>
+
 
 
